styles.css
/* ... */
@media only screen and (min-width: 900px) {
  .chisel-rhythm .inline-title {
    margin-top: calc(var(--margin) * 4);
  }
}
/* Preview mode (reading view) */
.chisel-rhythm .markdown-reading-view h1 + h2,
.chisel-rhythm .markdown-reading-view h1 + h3,
.chisel-rhythm .markdown-reading-view h1 + h4,
.chisel-rhythm .markdown-reading-view h1 + h5,
.chisel-rhythm .markdown-reading-view h1 + h6,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-2.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-3.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-4.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-5.cm-line,
.chisel-rhythm .HyperMD-header-1.cm-line + .HyperMD-header-6.cm-line {
  margin-top: calc(var(--margin) * 2);
}

.plugin-setting-tab details {
  margin-top: 1em; /* Adjust as needed */
}
/*# sourceMappingURL=styles.css.map */

